# audiolibro-pdf

./: .env.example  .env.production.example  .env.staging  .env.staging.example  .gitignore  BLOCK_1_COMPLETE.md  BLOCK_2_ARCHITECTURE.md  BLOCK_2_COMPLETE.md  BLOCK_2_QUICK_REFERENCE.md  BLOCK_2_SETUP.md  BLOCK_2_SUMMARY.md  BLOCK_6A_SUMMARY.md  BLOCK_6B_DEPLOY.md  BLOCK_6B_QUICKREF.md  BLOCK_6B_READY.md  BLOCK_6B_SUMMARY.md  BLOCK_6C_DEPLOY_GUIDE.md  BLOCK_6C_READY.md  BLOCK_6C_SUMMARY.md  BLOCK_7_QUICKREF.md  BLOCK_7_SUMMARY.md  BLOCK_8A_QUICK_START.md  BLOCK_8A_SUMMARY.md  BLOCK_8B_FILES_CREATED.md  BLOCK_8B_IMPLEMENTATION_SUMMARY.txt  BLOCK_8B_READY.md  BLOCK_8C_READY.md  BLOCK_8D_IMPLEMENTATION_SUMMARY.txt  BLOCK_8D_READY.md  BLOCK_8E_COMPLETE_SUMMARY.md  BLOCK_8E_IMPLEMENTATION_SUMMARY.txt  BLOCK_8E_READY.md  DEPLOY_TRIGGER.txt  Makefile  NEXT_STEPS.md  README.md  SETUP.md  START_HERE.md  SUB_BLOCK_3C_COMPLETE.md  deploy_block_6a.sh  (+7 more)
services/api/: .env.example  alembic.ini  conftest.py  pyproject.toml  pytest.ini  railway.toml  requirements-no-pymupdf.txt  requirements-test.txt  requirements.txt  start-worker.sh  start.sh  test_api.sh
services/api/alembic/: env.py
services/api/alembic/versions/: .gitkeep  001_initial_setup.py  002_add_auth_fields.py  003_cost_governance.py  (+11 more)
services/api/app/: celery_app.py  main.py
services/api/tests/: __init__.py  conftest.py  conftest.py.bak  conftest.py.bak2  factories.py  fakes.py  test_auth.py  test_auth.py.bak  test_health.py
services/api/tests_backup/: conftest.py  conftest.py.bak  test_auth.py  test_health.py
(+353 files in other folders)
